chore(formatting): switch to ruff

--- a/.github/workflows/pymake-linting-install.yml
+++ b/.github/workflows/pymake-linting-install.yml
@@ -29,34 +29,13 @@ jobs:
         uses: ts-graphviz/setup-graphviz@v2
 
       - name: Install packages
-        run: |
-          pip install requests pydotplus appdirs numpy matplotlib
-          pip install https://github.com/modflowpy/flopy/zipball/develop
-          pip install pylint flake8 black
+        run: pip install ".[lint]"
 
-      - name: Run isort
-        run: |
-          echo "if isort check fails update isort using"
-          echo "  pip install isort --upgrade"
-          echo "and run"
-          echo "  isort ./flopy"
-          echo "and then commit the changes."
-          isort --verbose --check --diff ./pymake
+      - name: Lint
+        run: ruff check .
 
-      - name: Run black
-        run: |
-          echo "if black check fails update black using"
-          echo "  pip install black --upgrade"
-          echo "and run"
-          echo "  black ./flopy"
-          echo "and then commit the changes."
-          black --check --diff ./pymake
-
-      - name: Run flake8
-        run: flake8 --count --show-source --exit-zero ./pymake
-
-      - name: Run pylint
-        run: pylint --jobs=2 --errors-only --exit-zero ./pymake
+      - name: Check format
+        run: ruff format . --check
 
   pymake_setup:
     name: standard installation
