--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,11 +41,8 @@ dependencies = [
 dynamic = ["version", "readme"]
 [project.optional-dependencies]
 lint = [
-    "black",
     "cffconvert",
-    "flake8",
-    "isort",
-    "pylint",
+    "ruff",
 ]
 test = [
     "mfpymake[lint]",
@@ -90,18 +87,29 @@ include = ["pymake", "pymake.*"]
 [tool.setuptools.package-data]
 "pymake.utils" = ["usgsprograms.txt"]
 
-[tool.black]
-line-length = 79
-target_version = ["py38"]
-
-[tool.flynt]
-line-length = 79
-verbose = true
-
-[tool.isort]
-profile = "black"
-src_paths = ["pymake", "autotest", "examples"]
-line_length = 79
-
 [tool.setuptools_scm]
 fallback_version = "999"
+
+[tool.ruff]
+line-length = 79
+target-version = "py38"
+include = [
+    "pyproject.toml",
+    "pymake/**/*.py",
+    "autotest/**/*.py",
+    "docs/**/*.py",
+]
+
+[tool.ruff.lint]
+ignore = [
+    "E402", # module level import not at top of file
+    "E712", # Avoid equality comparisons to `True`
+    "E722", # do not use bare `except`
+    "E741", # ambiguous variable name
+    "F401", # unused import
+    "F403", # unable to detect undefined names (star imports)
+    "F524", # `.format` missing argument(s) for placeholder(s)
+    "F811", # Redefinition of unused variable
+    "F821", # undefined name TODO FIXME
+    "F841", # local variable assigned but never used
+]
