--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ include = [
 ]
 
 [tool.ruff.lint]
+select = ["F", "E", "I001"]
 ignore = [
     "E402", # module level import not at top of file
     "E712", # Avoid equality comparisons to `True`
