--- a/autotest/pytest.ini
+++ b/autotest/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = --color=yes
 markers =
     base: base tests
     dependency: tests that depend on other tests (via pytest-dependency)
