ci: add pixi to CI workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ requires-python = ">=3.8"
 dependencies = [
     "numpy",
     "requests",
-    "networkx >= 2.6.3",
+    "networkx",
     "meson",
     "ninja",
     "pydotplus",
