--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -24,17 +24,12 @@ jobs:
       matrix:
         include:
           # test latest gcc and python
-          - {os: ubuntu-latest, gcc: 13, python: "3.12"}
-          - {os: windows-latest, gcc: 13, python: "3.12"}
-          - {os: macos-latest, gcc: 13, python: "3.12"}
-          # test latest gcc and previous python
-          - {os: ubuntu-latest, gcc: 13, python: "3.11"}
-          - {os: ubuntu-latest, gcc: 13, python: "3.10"}
-          - {os: ubuntu-latest, gcc: 13, python: 3.9}
-          - {os: ubuntu-latest, gcc: 13, python: 3.8}
+          - {os: ubuntu-latest, gcc: 13}
+          - {os: windows-latest, gcc: 13}
+          - {os: macos-latest, gcc: 13}
           # test latest python and previous gcc
-          - {os: ubuntu-latest, gcc: 12, python: "3.12"}
-          - {os: ubuntu-latest, gcc: 11, python: "3.12"}
+          - {os: ubuntu-latest, gcc: 12}
+          - {os: ubuntu-latest, gcc: 11}
     defaults:
       run:
         shell: bash
@@ -47,15 +42,17 @@ jobs:
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          python-version: ${{ matrix.python }}
+          pixi-version: v0.19.1
+          manifest-path: "pymake/pixi.toml"
 
-      - name: Install python packages
+      - name: Custom pixi install
+        working-directory: pymake
         run: |
-          python -m pip install --upgrade pip
-          pip install ".[test]"
+          pixi run install
+          pixi run postinstall
 
       - name: Setup GNU Fortran
         uses: fortran-lang/setup-fortran@main
@@ -64,7 +61,8 @@ jobs:
           version: ${{ matrix.gcc }}
 
       - name: Download examples for pytest runs
-        run: .github/common/download-examples.sh
+        run: |
+          pixi run download-examples 
       
       - name: Install make
         if: runner.os == 'Windows'
@@ -73,11 +71,11 @@ jobs:
       - name: Run pytest
         working-directory: ./autotest
         run: |
-          markers="base"
-          if [[ ${{ matrix.gcc }} == 13 ]]; then
-            markers="base or regression"
+          pixi_task="autotest-base"
+          if [[ ${{ matrix.os }} == "ubuntu-latest" ]]; then
+            pixi_task="autotest"
           fi
-          pytest -v --dist=loadfile -n=auto --durations=0 --basetemp=pytest_temp --cov=pymake --cov-report=xml --cov-append -m "$markers"
+          pixi run "$pixi_task"
 
       - name: Print coverage report before upload
         working-directory: ./autotest
