--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -46,7 +46,7 @@ jobs:
         uses: prefix-dev/setup-pixi@v0.8.1
         with:
           pixi-version: v0.19.1
-          manifest-path: "pymake/pixi.toml"
+          manifest-path: "pixi.toml"
 
       - name: Custom pixi install
         working-directory: pymake
