* update pixi post-install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,10 +50,9 @@ jobs:
           pixi-version: v0.19.1
           manifest-path: "pixi.toml"
 
-      - name: Custom pixi install
+      - name: pixi post-install
         working-directory: pymake
         run: |
-          pixi run install
           pixi run postinstall
 
       - name: Download examples for pytest runs
