--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -68,11 +68,10 @@ jobs:
         run: choco install make
 
       - name: Run pytest
-        working-directory: ./autotest
         run: |
           pixi_task="autotest-base"
-          if [[ ${{ matrix.os }} == "ubuntu-latest" ]]; then
-            pixi_task="autotest"
+          if [[ ${{ matrix.os }} == "windows-latest" ]]; then
+            pixi_task="autotest-Windows"
           fi
           pixi run "$pixi_task"
 
