--- a/pixi.toml
+++ b/pixi.toml
@@ -44,3 +44,6 @@ download-examples = {cmd = "python ci_setup.py", cwd = "autotest"}
 autotest = { cmd = "pytest -v -n auto --dist=loadfile -m='base or regression' --durations 0 --cov=pymake --cov-report=xml --keep-failed .failed", cwd = "autotest" }
 autotest-base = { cmd = "pytest -v -n auto --dist=loadfile -m='base' --durations 0 --cov=pymake --cov-report=xml --keep-failed .failed", cwd = "autotest" }
 autotest-Windows = { cmd = "pytest -v -m='base' --durations 0 --cov=pymake --cov-report=xml --basetemp=pytest_temp --keep-failed .failed", cwd = "autotest" }
+
+# coverage report
+coverage-report = { cmd = "coverage report", cwd = "autotest"}
