--- a/.github/workflows/pymake-linting-install.yml
+++ b/.github/workflows/pymake-linting-install.yml
@@ -20,22 +20,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          python-version: "3.12"
-
-      - name: Setup Graphviz
-        uses: ts-graphviz/setup-graphviz@v2
-
-      - name: Install packages
-        run: pip install ".[lint]"
+          pixi-version: v0.19.1
+          manifest-path: "pixi.toml"
 
       - name: Lint
-        run: ruff check .
+        run: pixi run check-lint
 
       - name: Check format
-        run: ruff format . --check
+        run: pixi run check-format
 
   pymake_setup:
     name: standard installation
