--- a/pixi.toml
+++ b/pixi.toml
@@ -33,8 +33,9 @@ ruff = "*"
 postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."
 
 # format
-check-format = "ruff check ."
-fix-format = "ruff check . --fix"
+check-lint = "ruff check ."
+check-format = "ruff format . --check"
+fix-format = "ruff format ."
 
 # build
 test = "meson test --verbose --no-rebuild -C"
