--- a/pixi.toml
+++ b/pixi.toml
@@ -34,6 +34,7 @@ postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-
 
 # format
 check-lint = "ruff check ."
+fix-lint = "ruff check . --fix"
 check-format = "ruff format . --check"
 fix-format = "ruff format ."
 
