--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,13 @@ jobs:
   pymakeCI-os-intel:
     name: pymake CI intel on different OSs
     runs-on: ${{ matrix.os }}
+    env:
+      FC: intel-classic
+      FC_V: "2021.7"
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2019]
+        os: [ubuntu-latest, macos-13, windows-2019]
     defaults:
       run:
         shell: bash
@@ -31,53 +34,50 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Intel Fortran Classic
+      - name: Setup ${{ env.FC }} ${{ env.FC_V }}
         uses: fortran-lang/setup-fortran@v1
         with:
-          compiler: intel-classic
-          version: "2021.7"
+          compiler: ${{ env.FC }}
+          version: ${{ env.FC_V }}
 
       - name: Setup Graphviz
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          python-version: "3.12"
+          pixi-version: v0.19.1
+          manifest-path: "pixi.toml"
 
-      - name: Install python packages
+      - name: pixi post-install
+        working-directory: pymake
         run: |
-          python -m pip install --upgrade pip
-          pip install ".[test]"
+          pixi run postinstall
 
       - name: Download examples for pytest runs
         run: |
-          .github/common/download-examples.sh
+          pixi run download-examples 
 
       - name: test on Linux
         if: runner.os == 'Linux'
-        working-directory: ./autotest
         run: |
-          pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml
+          pixi run autotest
 
       - name: test on MacOS
         if: runner.os == 'macOS'
-        working-directory: ./autotest
         run: |
-          pytest -v -n=auto --dist=loadfile -m="base" --durations=0 --cov=pymake --cov-report=xml
+          pixi run autotest-base
 
       - name: test on Windows
         if: runner.os == 'Windows'
-        working-directory: ./autotest
         shell: cmd
         run: |
-          pytest -v -m="base" --durations=0 --cov=pymake --cov-report=xml --basetemp=pytest_temp
+          pixi run autotest-Windows
 
       - name: Print coverage report before upload
-        working-directory: ./autotest
         run: |
-          coverage report
+          pixi run coverage-report
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
