--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -14,6 +14,9 @@ on:
     paths-ignore:
       - 'README.md'
       - 'docs/*.md'
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
 
   pymakeCI-os-gcc:
