update(meson): make meson the default build tool
* remove SUTRA from list of usgsprograms because of issues with meson build

--- a/pixi.toml
+++ b/pixi.toml
@@ -34,9 +34,8 @@ postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-
 
 # format
 check-lint = "ruff check ."
-fix-lint = "ruff check . --fix"
 check-format = "ruff format . --check"
-fix-format = "ruff format ."
+fix-style = "ruff check . --fix; ruff format ."
 
 # build
 test = "meson test --verbose --no-rebuild -C"
