--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -85,7 +85,15 @@ jobs:
         if: ${{ github.event_name == 'schedule' }}
         run: |
           pixi run build-all
- 
+
+      - name: Upload failed test output
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-${{ runner.os }}-gcc
+          path: pymake/autotest/.failed
+  
+
       - name: Print coverage report before upload
         run: |
           pixi run coverage-report
