--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -91,7 +91,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: failed-${{ runner.os }}-gcc
-          path: pymake/autotest/.failed
+          path: ./autotest/.failed
   
 
       - name: Print coverage report before upload
