--- a/autotest/pytest.ini
+++ b/autotest/pytest.ini
@@ -6,3 +6,4 @@ markers =
     regression: regression tests
     requests: usgsprograms requests tests
     schedule: tests to run if a scheduled job
+    slow: tests taking more than a few seconds to complete
