--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,16 +19,24 @@ concurrency:
   cancel-in-progress: true
 jobs:
 
-  pymakeCI-os-intel:
-    name: pymake CI intel on different OSs
+  pymakeCI-os-compiler:
+    name: pymake CI gcc on different OSs
     runs-on: ${{ matrix.os }}
-    env:
-      FC: intel-classic
-      FC_V: "2021.7"
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-13, windows-2019]
+        include:
+          # test latest gcc and python
+          - {os: ubuntu-latest, FC: gcc, FC_V: 13}
+          - {os: windows-latest, FC: gcc, FC_V: 13}
+          - {os: macos-latest, FC: gcc, FC_V: 13}
+          # test latest python and previous gcc
+          - {os: ubuntu-latest, FC: gcc, FC_V: 12}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 11}
+          # test latest python and intel
+          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7}
+          - {os: windows-latest, FC: intel-classic, FC_V: 2021.7}
+          - {os: macos-13, FC: intel-classic, FC_V: 2021.7}
     defaults:
       run:
         shell: bash
@@ -38,17 +46,11 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: maxim-lobanov/setup-xcode@v1
-        if: runner.os == 'macOS'
+        if: ${{ (runner.os == 'macOS') && (matrix.FC == 'intel-classic') }}
         with:
           xcode-version: "14.3.1"
 
-      - name: Setup ${{ env.FC }} ${{ env.FC_V }}
-        uses: fortran-lang/setup-fortran@v1
-        with:
-          compiler: ${{ env.FC }}
-          version: ${{ env.FC_V }}
-
-      - name: Setup Graphviz
+      - name: Setup Graphviz on Linux
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v2
 
@@ -63,26 +65,38 @@ jobs:
         run: |
           pixi run postinstall
 
+      - name: Setup ${{ env.FC }} ${{ env.FC_V }}
+        uses: fortran-lang/setup-fortran@main
+        with:
+          compiler: ${{ matrix.FC }}
+          version: ${{ matrix.FC_V }}
+
       - name: Download examples for pytest runs
         run: |
           pixi run download-examples 
+      
+      - name: Install make
+        if: runner.os == 'Windows'
+        run: choco install make
 
-      - name: test on Linux
-        if: runner.os == 'Linux'
-        run: |
-          pixi run autotest
-
-      - name: test on MacOS
-        if: runner.os == 'macOS'
+      - name: Run pytest on Linux and MacOS
+        if: runner.os != 'Windows'
         run: |
           pixi run autotest-base
 
       - name: test on Windows
         if: runner.os == 'Windows'
-        shell: cmd
+        shell: pwsh
         run: |
           pixi run autotest-Windows
 
+      - name: Upload failed test output
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-${{ matrix.os }}-${{ matrix.FC }}-${{ matrix.FC_V }}
+          path: ./autotest/.failed
+          
       - name: Print coverage report before upload
         run: |
           pixi run coverage-report
