--- a/.github/workflows/pymake-intel.yml
+++ b/.github/workflows/pymake-intel.yml
@@ -1,4 +1,4 @@
-name: pymake gcc build
+name: pymake continuous integration intel
 
 on:
   schedule:
@@ -19,20 +19,16 @@ concurrency:
   cancel-in-progress: true
 jobs:
 
-  pymakeCI-os-gcc:
-    name: pymake CI gcc on different OSs
+  pymakeCI-os-intel:
+    name: pymake CI intel on different OSs
     runs-on: ${{ matrix.os }}
+    env:
+      FC: intel-classic
+      FC_V: "2021.7"
     strategy:
       fail-fast: false
       matrix:
-        include:
-          # test latest gcc and python
-          - {os: ubuntu-latest, gcc: 13}
-          - {os: windows-latest, gcc: 13}
-          - {os: macos-latest, gcc: 13}
-          # test latest python and previous gcc
-          - {os: ubuntu-latest, gcc: 12}
-          - {os: ubuntu-latest, gcc: 11}
+        os: [ubuntu-latest, macos-13, windows-2019]
     defaults:
       run:
         shell: bash
@@ -41,7 +37,18 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Graphviz on Linux
+      - uses: maxim-lobanov/setup-xcode@v1
+        if: runner.os == 'macOS'
+        with:
+          xcode-version: "14.3.1"
+
+      - name: Setup ${{ env.FC }} ${{ env.FC_V }}
+        uses: fortran-lang/setup-fortran@v1
+        with:
+          compiler: ${{ env.FC }}
+          version: ${{ env.FC_V }}
+
+      - name: Setup Graphviz
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v2
 
@@ -56,28 +63,23 @@ jobs:
         run: |
           pixi run postinstall
 
-      - name: Setup GNU Fortran
-        uses: fortran-lang/setup-fortran@main
-        with:
-          compiler: gcc
-          version: ${{ matrix.gcc }}
-
       - name: Download examples for pytest runs
         run: |
           pixi run download-examples 
-      
-      - name: Install make
-        if: runner.os == 'Windows'
-        run: choco install make
 
-      - name: Run pytest on Linux and MacOS
-        if: runner.os != 'Windows'
+      - name: test on Linux
+        if: runner.os == 'Linux'
+        run: |
+          pixi run autotest
+
+      - name: test on MacOS
+        if: runner.os == 'macOS'
         run: |
           pixi run autotest-base
 
       - name: test on Windows
         if: runner.os == 'Windows'
-        shell: pwsh
+        shell: cmd
         run: |
           pixi run autotest-Windows
 
