--- a/.github/workflows/pymake-requests.yml
+++ b/.github/workflows/pymake-requests.yml
@@ -30,32 +30,32 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          python-version: "3.12"
+          pixi-version: v0.19.1
+          manifest-path: "pixi.toml"
 
-      - name: Install python packages
+      - name: pixi post-install
+        working-directory: pymake
         run: |
-          python -m pip install --upgrade pip
-          pip install ".[test]"
+          pixi run postinstall
 
       - name: Run pytest
-        working-directory: ./autotest
         run: |
-          pytest -v -n=auto -m requests --durations=0 --cov=pymake --cov-report=xml
+          pixi run autotest-request
 
-      - name: Run scheduled tests
-        if: ${{ github.event_name == 'schedule' }}
-        working-directory: ./autotest
-        run: |
-          pytest -v -m="schedule" --durations=0 --cov=pymake --cov-report=xml
+      - name: Upload failed test output
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-requests
+          path: ./autotest/.failed
 
       - name: Print coverage report before upload
-        working-directory: ./autotest
         run: |
-          coverage report
-
+          pixi run coverage-report
+  
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         env:
