--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,85 +19,8 @@ concurrency:
   cancel-in-progress: true
 jobs:
 
-  pymake-schedule:
-    name: pymake CI gcc on different OSs
-    if: ${{ github.event_name == 'schedule' }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          # test latest gcc and python
-          - {os: ubuntu-latest, FC: gcc, FC_V: 13}
-          - {os: macos-latest, FC: gcc, FC_V: 13}
-          - {os: windows-latest, FC: gcc, FC_V: 13}
-          # test latest python and intel
-          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7}
-          - {os: macos-13, FC: intel-classic, FC_V: 2021.7}
-          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7}
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - uses: maxim-lobanov/setup-xcode@v1
-        if: ${{ (runner.os == 'macOS') && (matrix.FC == 'intel-classic') }}
-        with:
-          xcode-version: "14.3.1"
-
-      - name: Setup Graphviz on Linux
-        if: runner.os == 'Linux'
-        uses: ts-graphviz/setup-graphviz@v2
-
-      - name: Setup pixi
-        uses: prefix-dev/setup-pixi@v0.8.1
-        with:
-          pixi-version: v0.19.1
-          manifest-path: "pixi.toml"
-
-      - name: pixi post-install
-        working-directory: pymake
-        run: |
-          pixi run postinstall
-
-      - name: Setup ${{ matrix.FC }} ${{ matrix.FC_V }} on ${{ matrix.os }}
-        uses: fortran-lang/setup-fortran@main
-        with:
-          compiler: ${{ matrix.FC }}
-          version: ${{ matrix.FC_V }}
-      
-      - name: Install make
-        if: runner.os == 'Windows'
-        run: choco install make
-
-      - name: Run scheduled tests
-        run: |
-          pixi run autotest-schedule
-
-      - name: Upload failed test output
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: failed-schedule-${{ matrix.os }}-${{ matrix.FC }}-${{ matrix.FC_V }}
-          path: ./autotest/.failed
-
-      - name: Print coverage report before upload
-        run: |
-          pixi run coverage-report
-  
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        with:
-          file: ./autotest/coverage.xml
-  
-
   pymake-os-compiler:
-    name: pymake CI gcc on different OSs
+    name: pymake CI on different OSs with gcc and intel-classic
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -190,3 +113,80 @@ jobs:
         with:
           file: ./autotest/coverage.xml
   
+  pymake-schedule:
+    name: pymake scheduled CI different OSs with gcc and intel-classic
+    if: ${{ github.event_name == 'schedule' }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          # test latest gcc and python
+          - {os: ubuntu-latest, FC: gcc, FC_V: 13}
+          - {os: macos-latest, FC: gcc, FC_V: 13}
+          - {os: windows-latest, FC: gcc, FC_V: 13}
+          # test latest python and intel
+          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7}
+          - {os: macos-13, FC: intel-classic, FC_V: 2021.7}
+          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7}
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - uses: maxim-lobanov/setup-xcode@v1
+        if: ${{ (runner.os == 'macOS') && (matrix.FC == 'intel-classic') }}
+        with:
+          xcode-version: "14.3.1"
+
+      - name: Setup Graphviz on Linux
+        if: runner.os == 'Linux'
+        uses: ts-graphviz/setup-graphviz@v2
+
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
+        with:
+          pixi-version: v0.19.1
+          manifest-path: "pixi.toml"
+
+      - name: pixi post-install
+        working-directory: pymake
+        run: |
+          pixi run postinstall
+
+      - name: Setup ${{ matrix.FC }} ${{ matrix.FC_V }} on ${{ matrix.os }}
+        uses: fortran-lang/setup-fortran@main
+        with:
+          compiler: ${{ matrix.FC }}
+          version: ${{ matrix.FC_V }}
+      
+      - name: Install make
+        if: runner.os == 'Windows'
+        run: choco install make
+
+      - name: Run scheduled tests
+        run: |
+          pixi run autotest-schedule
+
+      - name: Upload failed test output
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-schedule-${{ matrix.os }}-${{ matrix.FC }}-${{ matrix.FC_V }}
+          path: ./autotest/.failed
+
+      - name: Print coverage report before upload
+        run: |
+          pixi run coverage-report
+  
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          file: ./autotest/coverage.xml
+  
+
