ci: update code.json for release workflow

--- a/pixi.toml
+++ b/pixi.toml
@@ -52,3 +52,4 @@ coverage-report = { cmd = "coverage report", cwd = "autotest"}
 
 # release 
 update-version = { cmd = "python scripts/update_version.py -v"}
+create-codejson = { cmd = "make-code-json" }
