--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,19 +27,19 @@ jobs:
       matrix:
         include:
           # test latest gcc and python
-          - {os: ubuntu-latest, FC: gcc, FC_V: 13}
-          - {os: macos-latest, FC: gcc, FC_V: 13}
-          - {os: windows-latest, FC: gcc, FC_V: 13}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: macos-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: windows-latest, FC: gcc, FC_V: 13, shell: pwsh}
           # test latest python and intel-classic
-          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7}
-          - {os: macos-13, FC: intel-classic, FC_V: 2021.7}
-          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7}
+          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: macos-13, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7, shell: pwsh}
           # test latest python and previous gcc
-          - {os: ubuntu-latest, FC: gcc, FC_V: 12}
-          - {os: ubuntu-latest, FC: gcc, FC_V: 11}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 12, shell: bash}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 11, shell: bash}
     defaults:
       run:
-        shell: bash
+        shell: ${{ matrix.shell }}
 
     steps:
       - name: Checkout repo
@@ -91,7 +91,6 @@ jobs:
 
       - name: test on Windows
         if: runner.os == 'Windows'
-        shell: pwsh
         run: |
           pixi run autotest-base
 
@@ -115,23 +114,23 @@ jobs:
   
   pymake-schedule:
     name: pymake scheduled
-    if: ${{ github.event_name == 'schedule' }}
+    # if: ${{ github.event_name == 'schedule' }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
           # test latest gcc and python
-          - {os: ubuntu-latest, FC: gcc, FC_V: 13}
-          - {os: macos-latest, FC: gcc, FC_V: 13}
-          - {os: windows-latest, FC: gcc, FC_V: 13}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: macos-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: windows-2019, FC: gcc, FC_V: 13, shell: pwsh}
           # test latest python and intel
-          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7}
-          - {os: macos-13, FC: intel-classic, FC_V: 2021.7}
-          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7}
+          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: macos-13, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7, shell: pwsh}
     defaults:
       run:
-        shell: bash
+        shell: ${{ matrix.shell }}
 
     steps:
       - name: Checkout repo
@@ -171,6 +170,12 @@ jobs:
         run: |
           pixi run autotest-schedule
 
+      - name: Upload failed test output
+        if: failure()
+        run: |
+          pwd
+          ls -h autotest/
+  
       - name: Upload failed test output
         if: failure()
         uses: actions/upload-artifact@v4
