--- a/pixi.toml
+++ b/pixi.toml
@@ -55,4 +55,4 @@ update-version = { cmd = "python scripts/update_version.py -v"}
 create-codejson = { cmd = "make-code-json" }
 
 [target.win-64.tasks]
-autotest-schedule = { cmd = "pytest -v -m='schedule' --durations=0 --cov=pymake --cov-report=xml --basetemp=$RUNNER_TEMP/pytest_temp --keep-failed .failed", cwd = "autotest" }
+autotest-schedule = { cmd = "pytest -v -m='schedule' --durations=0 --cov=pymake --cov-report=xml --basetemp=$(pwd)/temp --keep-failed .failed", cwd = "autotest" }
