--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
           # test latest gcc and python
           - {os: ubuntu-latest, FC: gcc, FC_V: 13, shell: bash}
           - {os: macos-latest, FC: gcc, FC_V: 13, shell: bash}
-          - {os: windows-2019, FC: gcc, FC_V: 13, shell: pwsh}
+          - {os: windows-latest, FC: gcc, FC_V: 13, shell: pwsh}
           # test latest python and intel
           - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7, shell: bash}
           - {os: macos-13, FC: intel-classic, FC_V: 2021.7, shell: bash}
