--- a/pixi.toml
+++ b/pixi.toml
@@ -11,6 +11,7 @@ coverage = "*"
 filelock = "*"
 flaky = "*"
 flopy = "*"
+hatchling = ">=1.27.0,<2"
 matplotlib = "*"
 meson = "1.3.0"
 modflow-devtools = "*"
